# internal/app/dto/user.go
@@ -25,3 +25,11 @@ type UserLoginResponse struct {
 	AccessToken  string `json:"access_token"`
 	RefreshToken string `json:"refresh_token"`
 }
+
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token"`
+}
+
+type AccessTokenResponse struct {
+	AccessToken string `json:"access_token"`
+}
